no quiero reprobar
Santa nunca te pedi nada, pero esta vez te pido que mi sistema funcione

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 ###puerto de la ejecucion de la aplicacion
-server.port=8032
+server.port=8089
 #url del poryecto
 server.servlet.context-path=/ferreteria
 #cadena de conexion 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bdferreteria?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ferreteriaR?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 #usuariode la base de datos
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 ##driver
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
