--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/ferreteria
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ferreteriaR?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 #usuariode la base de datos
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 ##driver
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
