--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-###puerto de la ejecucion de la aplicacion
-server.port=8089
+server.port=8082
 #url del poryecto
 server.servlet.context-path=/ferreteria
 #cadena de conexion 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ferreteriaR?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://single-2040.banahosting.com:3306/zfuxgsvw_ferreteriaraquel?allowPublicKeyRetrieval=true&useSSL=false
 #usuariode la base de datos
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=zfuxgsvw_root_ferreteriaraquel
+spring.datasource.password=LiM@2023
 ##driver
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 
